# alfred-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONFIDENCE_THRESHOLD_TESTS.md  CONTRIBUTING.md  LICENSE  README.MD  coderabbit.yml  main.py  manual_test_chatbot.py  pyproject.toml  requirements.txt  test_setup.py
config/: redis_client.py  settings.py
data/: fallback-responses.json  knowledge-base.json
data/fallback/en/: fallback-responses.json
data/fallback/ms/: fallback-responses.json
data/redis/: dump.rdb
data/sources/en/: dialog-en.json
data/sources/json/: dialog-ms.json
data/sources/ms/: dialog-ms.json
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf  wait-for-it.sh
docs/: ROADMAP.md  USAGE.md  api-documentation.yaml  api.md  changelog-format.md  docker_notes.md  phase6_implementation.md  prd.md  roadmap.md  usage.md
scripts/: install.ps1  install.sh
src/api/: middleware.py
src/api/route/: chat.py  health.py  session.py
src/api/routes/: __init__.py  chat.py  chroma.py  health.py  session.py
src/models/: conversation_state.py  intent.py  schema.py  session.py
src/services/: chatbot_engine.py  chroma_service.py  data_loader.py  knowledge_manager.py  session_manager.py  text_processor.py  vector_search.py
src/services/vector_store/: __init__.py  base.py  chroma_store.py  factory.py  pinecone_store.py  search_service.py  vector_store.py
src/utils/: data_utils.py  exceptions.py  logging_config.py  session_utils.py
tests/: debug_vector_scores.py  initialize_vector_search.py  manual_test_chatbot.py  test_chatbot_engine.py  test_intent_matching_en.py  test_intent_matching_ms.py  test_intent_models.py  test_intent_response_matching.py  test_knowledge_manager.py  test_phase6_integration.py  test_redis_connection.py  test_session_manager.py  test_session_manual.py  test_text_processor.py  test_vector_search.py
